Fixed: Footer link spacing

--- a/site-sass/site-specific/site.footer.scss
+++ b/site-sass/site-specific/site.footer.scss
@@ -156,7 +156,7 @@
   li {
     float: left;
     display: inline-block;
-    margin-right: 48px;
+    margin-right: 24px;
     @include mq($until:tablet) {
       margin-right: 10px;
     }
